--- a/views/pages/homepage.handlebars
+++ b/views/pages/homepage.handlebars
@@ -30,10 +30,13 @@
 			{{#if ../signedIn}}
 				{{#if (includes ../user.disliked _id)}}
 				{{else}}
-					<article id="{{_id}}" class="dog">
-						<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
-						{{!-- <img src="{{pictures[0]}}" /> --}}
-					</article>
+					{{#if (includes ../user.rejected _id)}}
+					{{else}}
+						<article id="{{_id}}" class="dog">
+							<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
+							{{!-- <img src="{{pictures[0]}}" /> --}}
+						</article>
+					{{/if}}
 				{{/if}}
 			{{else}}
 				<article id="{{_id}}" class="dog">
