--- a/views/pages/myaccount.handlebars
+++ b/views/pages/myaccount.handlebars
@@ -1,38 +1,38 @@
 <section>
 	<h1>Your Resources</h1>
 	<h2>My Application Statuses</h2>
-	{{!-- <p> --}}
-		<p>Pending:</p>
-		{{#each pending}}
-			<p><a href="/dogs/{{_id}}">{{name}}</a></p>
-		{{/each}}
-		<br>
-		<p>Accepted:</p>
-		{{#each accepted}}
-			{{!-- <p><a href="/dogs/{{_id}}">{{name}}</a></p> --}}
-			<p>{{this}}</p>
-		{{/each}}
-		<br>
-		<p>Rejected:</p>
-		{{#each rejected}}
-			{{!-- <p><a href="/dogs/{{_id}}">{{name}}</a></p> --}}
-			<p>{{name}}</p>
-		{{/each}}
-	{{!-- </p> --}}
+	{{! <p> }}
+	<h3>Pending:</h3>
+	{{#each pending}}
+		<p><a href="/dogs/{{_id}}">{{name}}</a></p>
+	{{/each}}
+	<br />
+	<h3>Accepted:</h3>
+	{{#each accepted}}
+		{{!-- <p><a href="/dogs/{{_id}}">{{name}}</a></p> --}}
+		<p>{{this}}</p>
+	{{/each}}
+	<br />
+	<h3>Rejected:</h3>
+	{{#each rejected}}
+		{{!-- <p><a href="/dogs/{{_id}}">{{name}}</a></p> --}}
+		<p>{{this}}</p>
+	{{/each}}
+	{{! </p> }}
 
 	<h2>Links & Forms</h2>
 	<a href="/account/settings/get">Click here to see your settings!</a>
-	<br>
+	<br />
 	<a href="/account/quiz">Click here to access our quiz!</a>
-	<br>
+	<br />
 	<a href="/account/dogs">Click here to see the dogs you posted!</a>
-	<br>
+	<br />
 	<a href="/account/application">Click here to access your application!</a>
-	<br>
+	<br />
 	<a href="/account/specificDogs/liked">Click here to see the dogs you liked!</a>
-	<br>
+	<br />
 	<a href="/account/specificDogs/ignored">Click here to see the dogs you
 		ignored!</a>
-	<br>
+	<br />
 
 </section>
