updated for more accessibilty

--- a/views/pages/loginForm.handlebars
+++ b/views/pages/loginForm.handlebars
@@ -7,10 +7,10 @@
         <input type="password" id="passwordInput" name="passwordInput">
         <button type="submit">Submit</button>
     </form>
-    <div id="error" class="error" hidden></div>
-    <div class="error">
+    <div id="error" class="error1" hidden></div>
+    <div class="error1">
     {{#each errors}}
-        <p class="error">{{this}}</p>
+        <p class="error1">{{this}}</p>
     {{/each}}
     </div>
     <a href="/register">Click here to register!</a>
