--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,14 @@
 h1 {
 	color: #ffffff;
+	text-align: center;
 }
 
 h2 {
 	color: #ebad83;
 }
 
-h3{
-    color:white;
+h3 {
+	color: white;
 }
 
 body {
@@ -26,97 +27,99 @@ label {
 }
 
 ul {
-    list-style-type: none;
-    overflow:hidden;
-    background-color: #e6f8fa;
+	list-style-type: none;
+	overflow: hidden;
+	background-color: #e6f8fa;
 }
 
 li a {
-    float: left;
-    display: block;
-    padding: 15px 15px;
-    /* color:#e6f8fa; */
-    text-decoration: none;
+	float: left;
+	display: block;
+	padding: 15px 15px;
+	/* color:#e6f8fa; */
+	text-decoration: none;
 }
 
-li a:hover{
-    background-color: #b4fbdf;
+li a:hover {
+	background-color: #b4fbdf;
 }
 
-li a:visited{
-    color:#307a82;
+li a:visited {
+	color: #307a82;
 }
-li a:link{
-    color:#307a82;
+li a:link {
+	color: #307a82;
 }
 
 a:link {
-    color: #e6f8fa;
-    font-size: 20;
-
+	color: #e6f8fa;
+	font-size: 20;
 }
-  
-a:visited {
-    color: #C38D9E;
-    font-size: 20;
 
+a:visited {
+	color: #c38d9e;
+	font-size: 20;
 }
 
 a:hover {
-    color: #BAA7B0;
-    font-size: 20;
+	color: #baa7b0;
+	font-size: 20;
 }
 
 a:active {
-    color: #B2ABBF;
-    font-size: 20;
+	color: #b2abbf;
+	font-size: 20;
 }
 
-input[type=text], input[type=email], input[type=password], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+select {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
 }
 
-button[type=submit] {
-    width: 100%;
-    background-color: #C7EBF0;
-    color: #000000;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+button[type="submit"] {
+	width: 100%;
+	background-color: #c7ebf0;
+	color: #000000;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
 
-input[type=text], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-button[type=submit]:hover {
-    background-color: #BAA7B0;
+input[type="text"],
+select {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
 }
 
-p{
-    color:white;
-    font-size: 20;
+button[type="submit"]:hover {
+	background-color: #baa7b0;
 }
 
-address{
-    color:white;
+p {
+	color: white;
+	font-size: 20;
+}
+
+address {
+	color: white;
 }
 
 error1 {
-    color: #ffdad2;
-    background-color: #0e7075;
+	color: #ffdad2;
+	background-color: #0e7075;
 }
