updated for valid html and accessibility

--- a/views/pages/registerForm.handlebars
+++ b/views/pages/registerForm.handlebars
@@ -15,10 +15,10 @@
         <input type="number" id="ageInput" name="ageInput">
         <button type="submit">Submit</button>
     </form>
-    <div id="error" class="error" hidden></div>
+    <div id="error1" class="error1" hidden></div>
     {{!-- <div class="error"> --}}
     {{#each errors}}
-        <p class="error">{{this}}</p>
+        <p class="error1">{{this}}</p>
     {{/each}}
     <a href="/login">Already have an account? Click here to log-in</a>
 </section>
