--- a/views/pages/singledog.handlebars
+++ b/views/pages/singledog.handlebars
@@ -28,7 +28,7 @@
 	<p>{{dog.age}}</p>
 
 	<h4>Weight:</h4>
-	<p>{{dog.weight}}</p>
+	<p>{{dog.weight}} pounds</p>
 
 	<h4>Description:</h4>
 	<p>{{dog.description}}</p>
