Fixed register client side

--- a/views/pages/registerForm.handlebars
+++ b/views/pages/registerForm.handlebars
@@ -15,7 +15,7 @@
         <input type="number" id="ageInput" name="ageInput">
         <button type="submit">Submit</button>
     </form>
-    <div id="error1" class="error1" hidden></div>
+    <div id="error" class="error1" hidden></div>
     {{!-- <div class="error"> --}}
     {{#each errors}}
         <p class="error1">{{this}}</p>
